--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.guava:guava:32.1.1-jre'
     implementation 'org.springframework.boot:spring-boot-starter-web:3.1.5'
@@ -19,10 +20,11 @@ dependencies {
     // Spring AOP Dependency
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.aspectj:aspectjrt:1.9.7'
+    implementation 'com.h2database:h2:2.2.220'
 
 // AspectJ Dependency
     implementation 'org.aspectj:aspectjrt:1.9.6'
-
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
